Fix tsconfig.json: Include lib/ and scripts/ directories for TypeScript checking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
   },
   "include": [
     "tests/**/*",
-    "src/**/*"
+    "lib/**/*",
+    "scripts/**/*"
   ],
   "exclude": [
     "node_modules",
