--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,12 +43,17 @@ jobs:
           GEMINI_TEST_MODE: mock
         run: npm run test:unit
 
+      - name: Generate Prisma clients
+        run: npm run prisma:generate
+
       - name: Run integration tests
         env:
           NODE_ENV: test
           GEMINI_API_KEY: mock-api-key-for-testing
           GEMINI_TEST_MODE: mock
           TEST_DATABASE_URL: file:/tmp/test-decision-trace.db
+          DATABASE_URL: file:/tmp/test-decision-trace.db
+          PRISMA_SCHEMA_TARGET: sqlite
         run: npm run test:integration
 
       - name: Install Playwright browsers
@@ -172,11 +177,15 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Prisma migrations
+      - name: Generate Prisma clients
+        run: npm run prisma:generate
+
+      - name: Run Prisma migrations (Postgres)
         env:
           DATABASE_URL: postgresql://test:test@localhost:5432/test_db
+          PRISMA_SCHEMA_TARGET: postgres
         run: |
-          npx prisma migrate deploy || echo "Migrations may already be applied"
+          npm run prisma:migrate:pg || echo "Migrations may already be applied"
 
       - name: Run Postgres migration tests
         env:
@@ -185,5 +194,6 @@ jobs:
           GEMINI_TEST_MODE: mock
           TEST_POSTGRES_URL: postgresql://test:test@localhost:5432/test_db
           DATABASE_URL: postgresql://test:test@localhost:5432/test_db
+          PRISMA_SCHEMA_TARGET: postgres
         run: npm run test:integration -- tests/integration/migration-safety.test.ts
 
