--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Generate Prisma clients
+        run: npm run prisma:generate
+
       - name: Type check
         run: npm run typecheck
         continue-on-error: false
