Fix Playwright CI webServer startup
- Update playwright.config.js webServer to use 'npm run start:test' with port 3000, timeout 120000, and reuseExistingServer=!CI
- Add build:test script: generates SQLite Prisma client, runs migrations, builds Next.js
- Add start:test script: starts Next.js production server on port 3000
- Update GitHub Actions E2E jobs to:
  - Create tmp directory and set DATABASE_URL=file:./tmp/e2e.db
  - Set PRISMA_SCHEMA_TARGET=sqlite for E2E tests
  - Run build:test before E2E tests
  - Set GEMINI_TEST_MODE=mock and FREE_MODE=true
  - Use BASE_URL=http://localhost:3000 (matching webServer port)
- GEMINI_API_KEY is not required at startup (only needed in live mode, which is not used in CI)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,13 +65,28 @@ jobs:
         run: npx playwright install --with-deps chromium
         if: matrix.node-version == '20.x'
 
+      - name: Setup E2E test database
+        if: matrix.node-version == '20.x'
+        run: mkdir -p tmp
+
+      - name: Build for E2E tests
+        if: matrix.node-version == '20.x'
+        env:
+          DATABASE_URL: file:./tmp/e2e.db
+          PRISMA_SCHEMA_TARGET: sqlite
+          GEMINI_TEST_MODE: mock
+          FREE_MODE: true
+        run: npm run build:test
+
       - name: Run Playwright E2E tests
         env:
           NODE_ENV: test
-          GEMINI_API_KEY: mock-api-key-for-testing
+          DATABASE_URL: file:./tmp/e2e.db
+          PRISMA_SCHEMA_TARGET: sqlite
           GEMINI_TEST_MODE: mock
+          FREE_MODE: true
           CI: true
-          BASE_URL: http://localhost:8000
+          BASE_URL: http://localhost:3000
         run: npm run test:e2e
         if: matrix.node-version == '20.x'
 
@@ -118,13 +133,26 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
+      - name: Setup E2E test database
+        run: mkdir -p tmp
+
+      - name: Build for E2E tests
+        env:
+          DATABASE_URL: file:./tmp/e2e.db
+          PRISMA_SCHEMA_TARGET: sqlite
+          GEMINI_TEST_MODE: mock
+          FREE_MODE: true
+        run: npm run build:test
+
       - name: Run Playwright E2E tests
         env:
           NODE_ENV: test
-          GEMINI_API_KEY: mock-api-key-for-testing
+          DATABASE_URL: file:./tmp/e2e.db
+          PRISMA_SCHEMA_TARGET: sqlite
           GEMINI_TEST_MODE: mock
+          FREE_MODE: true
           CI: true
-          BASE_URL: http://localhost:8000
+          BASE_URL: http://localhost:3000
         run: npm run test:e2e
 
       - name: Upload Playwright traces
