--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
     "@prisma/client": "^5.7.0",
+    "next": "^14.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -48,8 +51,6 @@
     "@vitest/ui": "^1.0.0",
     "jsdom": "^23.0.1",
     "prisma": "^5.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0",
     "vitest": "^1.0.0"
