--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x]
     
     steps:
       - name: Checkout code
@@ -63,14 +63,11 @@ jobs:
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
-        if: matrix.node-version == '20.x'
 
       - name: Setup E2E test database
-        if: matrix.node-version == '20.x'
         run: mkdir -p tmp
 
       - name: Build for E2E tests
-        if: matrix.node-version == '20.x'
         env:
           DATABASE_URL: file:./tmp/e2e.db
           PRISMA_SCHEMA_TARGET: sqlite
@@ -88,11 +85,10 @@ jobs:
           CI: true
           BASE_URL: http://localhost:3000
         run: npm run test:e2e
-        if: matrix.node-version == '20.x'
 
       - name: Upload Playwright traces
         uses: actions/upload-artifact@v4
-        if: failure() && matrix.node-version == '20.x'
+        if: failure()
         continue-on-error: true
         with:
           name: playwright-traces-${{ matrix.node-version }}-${{ github.run_number }}
