--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "prisma:generate": "npm run prisma:generate:pg && npm run prisma:generate:sqlite",
     "prisma:migrate:pg": "prisma migrate deploy --schema=prisma/schema.postgres.prisma",
     "prisma:migrate:sqlite": "prisma migrate deploy --schema=prisma/schema.sqlite.prisma",
-    "build:test": "npm run prisma:generate:sqlite && npm run prisma:migrate:sqlite && next build",
-    "start:test": "next start -p 3000",
-    "vercel-build": "npm run prisma:generate:pg && npm run prisma:migrate:pg && next build",
+    "build:test": "npm run prisma:generate:sqlite && npm run prisma:migrate:sqlite && npx next build",
+    "start:test": "npx next start -p 3000",
+    "vercel-build": "npm run prisma:generate:pg && npm run prisma:migrate:pg && npx next build",
     "postinstall": "npm run prisma:generate:pg"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
