Make Playwright E2E tests CI-reliable with smoke subset and increased timeouts
- Add @smoke tags to critical tests:
  - golden-path: full workflow test
  - golden-path: public share link test
  - messy-path: conflicts filter test
- Add test:e2e:smoke script to run only smoke tests
- Update playwright.config.js for CI:
  - timeout: 60000ms (was 30000ms)
  - expect timeout: 15000ms (was 5000ms)
  - retries: 2 (already set)
  - workers: 1 (already set)
  - webServer timeout: 180000ms (was 120000ms)
  - trace: retain-on-failure in CI
  - video: retain-on-failure in CI
- Update CI workflow to run test:e2e:smoke instead of full suite
- Ensure GEMINI_TEST_MODE=mock and FREE_MODE=true are set (already configured)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
           FREE_MODE: true
           CI: true
           BASE_URL: http://localhost:3000
-        run: npm run test:e2e
+        run: npm run test:e2e:smoke
 
       - name: Upload Playwright traces
         uses: actions/upload-artifact@v4
@@ -149,7 +149,7 @@ jobs:
           FREE_MODE: true
           CI: true
           BASE_URL: http://localhost:3000
-        run: npm run test:e2e
+        run: npm run test:e2e:smoke
 
       - name: Upload Playwright traces
         uses: actions/upload-artifact@v4
