Optimize CI smoke E2E: run only Chromium (not Firefox/WebKit/mobile)
- Create playwright.smoke.config.ts with Chromium-only project
- Update test:e2e:smoke to use smoke config
- CI already uses test:e2e:smoke (no changes needed)
- Faster CI runs: single browser instead of 5 projects

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:unit": "vitest run tests/unit",
     "test:integration": "vitest run tests/integration",
     "test:e2e": "playwright test",
-    "test:e2e:smoke": "playwright test --grep @smoke",
+    "test:e2e:smoke": "playwright test --config=playwright.smoke.config.ts --grep @smoke",
     "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
     "test:watch": "vitest watch",
     "test:ui": "vitest run tests/ui",
