--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,9 +72,9 @@ jobs:
           DATABASE_URL: file:./tmp/e2e.db
           PRISMA_SCHEMA_TARGET: sqlite
         run: |
-          npm run prisma:generate:sqlite
-          npm run prisma:db:push:sqlite
-          npm run db:seed
+          npx prisma generate --schema=prisma/schema.sqlite.prisma
+          npx prisma db push --schema=prisma/schema.sqlite.prisma --accept-data-loss
+          npx tsx prisma/seed.ts
 
       - name: Build for E2E tests
         env:
@@ -146,9 +146,9 @@ jobs:
           DATABASE_URL: file:./tmp/e2e.db
           PRISMA_SCHEMA_TARGET: sqlite
         run: |
-          npm run prisma:generate:sqlite
-          npm run prisma:db:push:sqlite
-          npm run db:seed
+          npx prisma generate --schema=prisma/schema.sqlite.prisma
+          npx prisma db push --schema=prisma/schema.sqlite.prisma --accept-data-loss
+          npx tsx prisma/seed.ts
 
       - name: Build for E2E tests
         env:
