Add stable path aliases for API routes
- Add baseUrl: '.' to tsconfig.json
- Add paths: { '@/*': ['./*'], '@/lib/*': ['./lib/*'] }
- Enables cleaner imports: '@/lib/prisma' instead of '../../../../lib/prisma'
- No other compiler options changed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["node", "vitest/globals"]
+    "types": ["node", "vitest/globals"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"],
+      "@/lib/*": ["./lib/*"]
+    }
   },
   "include": [
     "tests/**/*",
