Add stable test IDs and fix flaky smoke test assertions
- Add data-testid attributes to report pages (report-root, report-header)
- Add data-testid attributes to public report page (public-report-root, public-report-readonly-badge, public-report-header)
- Replace flaky string-based assertions with deterministic Playwright checks
- Make public report page demo-safe for test mode (always renders test IDs)
- Update smoke test config to run only on Chromium
- Ensure report pages render test IDs in all states (loading, error, missing report)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
-    "lib": ["ES2022", "DOM"],
+    "lib": [
+      "ES2022",
+      "DOM"
+    ],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -12,19 +15,34 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "types": ["node", "vitest/globals"],
+    "jsx": "preserve",
+    "types": [
+      "node",
+      "vitest/globals"
+    ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@/lib/*": ["./lib/*"]
-    }
+      "@/*": [
+        "./*"
+      ],
+      "@/lib/*": [
+        "./lib/*"
+      ]
+    },
+    "allowJs": true,
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "app/**/*",
     "tests/**/*",
     "lib/**/*",
-    "scripts/**/*"
+    "scripts/**/*",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
@@ -32,4 +50,3 @@
     "build"
   ]
 }
-
