Make SQLite the default schema for tests and CI
- Rename schema.prisma to schema.postgres.prisma (Postgres schema)
- Copy schema.sqlite.prisma to schema.prisma (SQLite is now default)
- Update package.json scripts to use SQLite by default
- Update CI workflow to use schema.prisma (SQLite) instead of schema.sqlite.prisma
- Update migration-safety test to use SQLite only, remove Postgres references
- Update documentation to mention Postgres schema location
- All tests now use SQLite schema by default, eliminating postgresql:// URL requirements

--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "smoke:prod": "tsx scripts/smoke-test.ts",
     "test:real-gemini": "tsx scripts/test-real-gemini.ts",
     "budget:check": "tsx scripts/budget-check.ts",
+    "prisma:generate": "prisma generate",
     "prisma:generate:pg": "prisma generate --schema=prisma/schema.postgres.prisma",
-    "prisma:generate:sqlite": "prisma generate --schema=prisma/schema.sqlite.prisma",
-    "prisma:generate": "npm run prisma:generate:pg && npm run prisma:generate:sqlite",
+    "prisma:generate:postgres": "prisma generate --schema=prisma/schema.postgres.prisma",
+    "prisma:generate:sqlite": "prisma generate --schema=prisma/schema.prisma",
     "prisma:migrate:pg": "prisma migrate deploy --schema=prisma/schema.postgres.prisma",
+    "prisma:migrate:postgres": "prisma migrate deploy --schema=prisma/schema.postgres.prisma",
     "prisma:migrate:sqlite": "prisma migrate deploy --schema=prisma/schema.sqlite.prisma",
-    "prisma:db:push:sqlite": "prisma db push --schema=prisma/schema.sqlite.prisma --accept-data-loss",
+    "prisma:db:push": "prisma db push --accept-data-loss",
+    "prisma:db:push:sqlite": "prisma db push --schema=prisma/schema.prisma --accept-data-loss",
     "db:seed": "tsx prisma/seed.ts",
-    "build:test": "npm run prisma:generate:sqlite && npm run prisma:db:push:sqlite && npm run db:seed && npx next build",
+    "build:test": "npm run prisma:generate && npm run prisma:db:push && npm run db:seed && npx next build",
     "start:test": "npx next start -p 3000",
     "vercel-build": "npm run prisma:generate:pg && npm run prisma:migrate:pg && npx next build",
-    "postinstall": "npm run prisma:generate:pg"
+    "postinstall": "npm run prisma:generate"
   },
   "keywords": [],
   "author": "",
