Revert schema rename: restore PostgreSQL as default, add CI skip logic for Postgres tests
- Restore prisma/schema.prisma to PostgreSQL (default for production)
- Update all scripts to use explicit --schema flags for SQLite tests
- Update CI workflows to use explicit schema.sqlite.prisma for E2E tests
- Add Postgres test skip logic in migration-safety.test.ts for CI/SQLite mode
- Add tmp/ directory creation in tests/setup.js for SQLite DB stability
- Update documentation to reflect schema organization

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,8 +72,8 @@ jobs:
           DATABASE_URL: file:./tmp/e2e.db
           PRISMA_SCHEMA_TARGET: sqlite
         run: |
-          npx prisma generate --schema=prisma/schema.prisma
-          npx prisma db push --schema=prisma/schema.prisma --accept-data-loss
+          npx prisma generate --schema=prisma/schema.sqlite.prisma
+          npx prisma db push --schema=prisma/schema.sqlite.prisma --accept-data-loss
           npx tsx prisma/seed.ts
 
       - name: Build for E2E tests
@@ -146,8 +146,8 @@ jobs:
           DATABASE_URL: file:./tmp/e2e.db
           PRISMA_SCHEMA_TARGET: sqlite
         run: |
-          npx prisma generate --schema=prisma/schema.prisma
-          npx prisma db push --schema=prisma/schema.prisma --accept-data-loss
+          npx prisma generate --schema=prisma/schema.sqlite.prisma
+          npx prisma db push --schema=prisma/schema.sqlite.prisma --accept-data-loss
           npx tsx prisma/seed.ts
 
       - name: Build for E2E tests
