--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "prisma:generate": "prisma generate",
     "prisma:generate:pg": "prisma generate --schema=prisma/schema.postgres.prisma",
     "prisma:generate:postgres": "prisma generate --schema=prisma/schema.postgres.prisma",
-    "prisma:generate:sqlite": "prisma generate --schema=prisma/schema.prisma",
+    "prisma:generate:sqlite": "prisma generate --schema=prisma/schema.sqlite.prisma",
     "prisma:migrate:pg": "prisma migrate deploy --schema=prisma/schema.postgres.prisma",
     "prisma:migrate:postgres": "prisma migrate deploy --schema=prisma/schema.postgres.prisma",
     "prisma:migrate:sqlite": "prisma migrate deploy --schema=prisma/schema.sqlite.prisma",
     "prisma:db:push": "prisma db push --accept-data-loss",
-    "prisma:db:push:sqlite": "prisma db push --schema=prisma/schema.prisma --accept-data-loss",
+    "prisma:db:push:sqlite": "prisma db push --schema=prisma/schema.sqlite.prisma --accept-data-loss",
     "db:seed": "tsx prisma/seed.ts",
-    "build:test": "npm run prisma:generate && npm run prisma:db:push && npm run db:seed && npx next build",
+    "build:test": "npm run prisma:generate:sqlite && npm run prisma:db:push:sqlite && npm run db:seed && npx next build",
     "start:test": "npx next start -p 3000",
     "vercel-build": "npm run prisma:generate:pg && npm run prisma:migrate:pg && npx next build",
-    "postinstall": "npm run prisma:generate"
+    "postinstall": "npm run prisma:generate:pg"
   },
   "keywords": [],
   "author": "",
