--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "prisma:db:push": "prisma db push --accept-data-loss",
     "prisma:db:push:sqlite": "prisma db push --schema=prisma/schema.sqlite.prisma --accept-data-loss",
     "db:seed": "tsx prisma/seed.ts",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "build:test": "npm run prisma:generate:sqlite && npm run prisma:db:push:sqlite && npm run db:seed && npx next build",
     "start:test": "npx next start -p 3000",
     "vercel-build": "npm run prisma:generate:pg && npm run prisma:migrate:pg && npx next build",
