Remove Prisma migrate from vercel-build - only generate client at build time
- Removed 'prisma:migrate:pg' from vercel-build script
- vercel-build now only runs: prisma:generate:pg && next build
- Prisma migrations should run at runtime (via API routes) or separately
- Prisma client generation doesn't require database connection
- Ensures Prisma only connects at runtime, not during build

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "start": "next start",
     "build:test": "npm run prisma:generate:sqlite && npm run prisma:db:push:sqlite && npm run db:seed && npx next build",
     "start:test": "npx next start -p 3000",
-    "vercel-build": "npm run prisma:generate:pg && npm run prisma:migrate:pg && npx next build",
+    "vercel-build": "npm run prisma:generate:pg && npx next build",
     "postinstall": "npm run prisma:generate:pg"
   },
   "keywords": [],
@@ -54,13 +54,17 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
-    "@testing-library/react": "^14.1.2",
     "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/ui": "^1.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
     "jsdom": "^23.0.1",
     "prisma": "^5.7.0",
     "tsx": "^4.7.0",
