--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "prisma:migrate:sqlite": "prisma migrate deploy --schema=prisma/schema.sqlite.prisma",
     "prisma:db:push": "prisma db push --accept-data-loss",
     "prisma:db:push:sqlite": "prisma db push --schema=prisma/schema.sqlite.prisma --accept-data-loss",
+    "db:migrate:prod": "npm run prisma:generate:pg && npm run prisma:migrate:pg",
     "db:seed": "tsx prisma/seed.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "build:test": "npm run prisma:generate:sqlite && npm run prisma:db:push:sqlite && npm run db:seed && npx next build",
     "start:test": "npx next start -p 3000",
-    "vercel-build": "npm run prisma:generate:pg && npx next build",
+    "vercel-build": "prisma generate --schema=prisma/schema.postgres.prisma && prisma db push --schema=prisma/schema.postgres.prisma --accept-data-loss && next build",
     "postinstall": "npm run prisma:generate:pg"
   },
   "keywords": [],
