Improve test DB initialization and Create Case API reliability
- Create reusable lib/db/init-test-db.ts module:
  - Handles tmp directory creation, Prisma schema sync, optional seeding
  - initTestDB() and initE2ETestDB() convenience functions
  - Returns success status and error details

- Refactor integration harness to use initTestDB():
  - setupIntegrationTests() now uses reusable module
  - Cleaner, more maintainable code
  - Still ensures DB initialized before tests run

- Add unit tests for initTestDB:
  - Verifies tmp directory creation
  - Verifies SQLite DB file creation at specified path
  - Verifies e2e.db creation at ./tmp/e2e.db
  - Tests error handling and optional seeding

- Improve Create Case API for hackathon/demo reliability:
  - Auto-initialize DB in demo mode if AUTO_INIT_DB=true
  - Clearer error messages for demo mode vs production
  - Production-safe: never auto-init unless explicitly enabled

- Make Postgres Migration Tests conditional:
  - Skip if RUN_POSTGRES_TESTS !== 'true'
  - Skip if DATABASE_URL missing or not Postgres
  - Keep SQLite tests running by default in CI
  - Update CI workflow to set RUN_POSTGRES_TESTS=true for Postgres job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -244,5 +244,6 @@ jobs:
           TEST_POSTGRES_URL: postgresql://test:test@localhost:5432/test_db
           DATABASE_URL: postgresql://test:test@localhost:5432/test_db
           PRISMA_SCHEMA_TARGET: postgres
+          RUN_POSTGRES_TESTS: 'true'  # Explicitly enable Postgres tests for this CI job
         run: npm run test:integration -- tests/integration/migration-safety.test.ts
 
