--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
     "@prisma/client": "^5.7.0",
+    "mammoth": "^1.11.0",
     "next": "^14.0.0",
+    "pdf-parse": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^4.3.6"
@@ -59,6 +61,7 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/node": "^20.10.0",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18.2.45",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
