--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "prisma": "^5.7.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0",
+    "undici": "^7.19.2",
     "vitest": "^1.0.0"
   }
 }
