fix(e2e): ensure demo mode in CI and resilient golden-path test
- ci: set DEMO_MODE=true for E2E steps so QuickStart uses demo case ID
- golden-path: wait for navigation or report first, then check error only on timeout

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,8 @@ jobs:
           FREE_MODE: true
           CI: true
           BASE_URL: http://localhost:3000
+          # Force demo mode so QuickStart flow uses demo case ID and instant run (no document link)
+          DEMO_MODE: 'true'
         run: npm run test:e2e:smoke
 
       - name: Upload Playwright traces
@@ -167,6 +169,8 @@ jobs:
           FREE_MODE: true
           CI: true
           BASE_URL: http://localhost:3000
+          # Force demo mode so QuickStart flow uses demo case ID and instant run (no document link)
+          DEMO_MODE: 'true'
         run: npm run test:e2e:smoke
 
       - name: Upload Playwright traces
