Decision ledger pipeline: Gemini analyze, report UI, limits, and errors
- Add lib/geminiDecisionLedger: generateDecisionLedgerWithGemini with schema + system instruction
- Add lib/decisionLedgerSchema: DecisionLedger type and DECISION_LEDGER_SCHEMA
- Add lib/validateLedger, lib/scoreRationale, lib/extractText, lib/analyzeLimits
- Analyze route: extract text -> Gemini -> validate -> ensureScoreRationale -> store; GEMINI_API_KEY check; file size 5MB limit; text truncation (20k+5k); 90s timeout
- Report route: return { ledger, meta, createdAt, title }; derive title from decision + filename
- Report page: render from report.ledger (Overview, Flow, Stakeholders, Evidence, Risks, Assumptions); AI/override banner; download audit JSON
- Frontend: analyze errors shown; redirect only on success; fetch timeout 100s
- README: Vercel env vars setup for GEMINI_API_KEY

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
+    "@google/genai": "^1.39.0",
     "@prisma/client": "^5.7.0",
     "mammoth": "^1.11.0",
     "next": "^14.0.0",
