Supabase persistence: decision_traces table, analyze/report use Supabase; temp debug logs and Analysis ID in report UI

--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,14 @@ FREE_PDF_ALLOWED=false
 # CI=true
 
 # ============================================
+# SUPABASE (Decision trace persistence)
+# ============================================
+# Supabase project URL (e.g. https://xxxx.supabase.co)
+SUPABASE_URL=
+# Service role key (server-only; never expose to client)
+SUPABASE_SERVICE_ROLE_KEY=
+
+# ============================================
 # VERCEL DEPLOYMENT (Production)
 # ============================================
 # For Vercel deployment, set these in Vercel Dashboard:
