--- a/package.json
+++ b/package.json
@@ -69,10 +69,13 @@
     "@typescript-eslint/parser": "^8.54.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/ui": "^1.0.0",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.6",
     "jsdom": "^23.0.1",
+    "postcss": "^8.5.6",
     "prisma": "^5.7.0",
+    "tailwindcss": "^4.1.18",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0",
     "undici": "^7.19.2",
